fixes scrollbar flickering

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -16,6 +16,7 @@ html, body, #game
     margin: 0
     padding: 0
     background-color: $background-color
+    overflow: hidden
 
 #game
     height: 400px
